[gd_scene load_steps=18 format=3 uid="uid://dbg3rrcb2335p"]

[ext_resource type="Texture2D" uid="uid://dkq7k514byr8q" path="res://assets/img/card_frame.png" id="1_8uoye"]
[ext_resource type="Script" path="res://Card.gd" id="2_lfpif"]
[ext_resource type="Texture2D" uid="uid://c1x0r8crk3dmw" path="res://assets/img/char2.png" id="3_emm5n"]
[ext_resource type="FontFile" uid="uid://c6sfep5yp1ovo" path="res://assets/font/TarotPamelaColmanSmith-Regular.ttf" id="4_hsjqr"]
[ext_resource type="Texture2D" uid="uid://bh8w583nuqusu" path="res://assets/img/card_border.png" id="5_aotjw"]
[ext_resource type="PackedScene" uid="uid://kgu8sfdbou4o" path="res://audio_stream_player_3d.tscn" id="6_dj0qk"]
[ext_resource type="AudioStream" uid="uid://ddk3egphl16wl" path="res://assets/snd/pick.ogg" id="7_mwuio"]
[ext_resource type="AudioStream" uid="uid://cj2ghdfhsedjw" path="res://assets/snd/place.ogg" id="8_8pows"]
[ext_resource type="AudioStream" uid="uid://b213x2nafkii6" path="res://assets/snd/confirm.ogg" id="9_q4qnh"]
[ext_resource type="AudioStream" uid="uid://dw801hyi6s2hx" path="res://assets/snd/pig-oink.ogg" id="10_ab4tq"]

[sub_resource type="FontVariation" id="FontVariation_x5hhw"]
variation_embolden = 0.79

[sub_resource type="Gradient" id="Gradient_jg6s5"]
offsets = PackedFloat32Array(0.614907, 0.639752)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gmd06"]
gradient = SubResource("Gradient_jg6s5")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_noj8t"]
size = Vector3(2.85254, 4.8538, 1)

[sub_resource type="Gradient" id="Gradient_5vp4y"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ahro"]
gradient = SubResource("Gradient_5vp4y")
width = 1
height = 1

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8ndsl"]
streams_count = 1
random_pitch = 1.4
stream_0/stream = ExtResource("10_ab4tq")
stream_0/weight = 1.0

[node name="Card" type="Node3D"]
script = ExtResource("2_lfpif")

[node name="Visual" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="Number" type="Label3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.017, 0.05176)
visible = false
sorting_offset = 2.0
shaded = true
texture_filter = 0
modulate = Color(0, 0, 0, 1)
text = "III"
font = ExtResource("4_hsjqr")
font_size = 110
outline_size = 0

[node name="Name" type="Label3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.01918, 0.0315416)
sorting_offset = 1.0
alpha_scissor_threshold = 0.588
texture_filter = 0
modulate = Color(0, 0, 0, 1)
text = "NAVIGATOR"
font = SubResource("FontVariation_x5hhw")
font_size = 80
outline_size = 0
uppercase = true

[node name="Countdown" type="Label3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.129, -1.972, 1.063)
visible = false
sorting_offset = 1.0
alpha_scissor_threshold = 0.588
texture_filter = 0
text = "5"
font = SubResource("FontVariation_x5hhw")
font_size = 140
outline_size = 0
uppercase = true

[node name="ProgressCircle" type="Sprite3D" parent="Visual/Countdown"]
transform = Transform3D(2.26424, 0, 0, 0, 2.26424, -7.10543e-15, 0, 7.10543e-15, 2.26424, 0, 0, -0.0231979)
alpha_cut = 1
texture = SubResource("GradientTexture2D_gmd06")

[node name="Illu" type="Sprite3D" parent="Visual"]
transform = Transform3D(0.654317, 0, 0, 0, 0.642231, -3.55271e-15, 0, 3.55271e-15, 0.654317, 0, -0.26817, 0.0439361)
sorting_offset = 1.0
transparent = false
texture = ExtResource("3_emm5n")
region_rect = Rect2(0, 24, 400, 608)

[node name="Background" type="Sprite3D" parent="Visual"]
transform = Transform3D(0.97748, 0, 0, 0, 0.97748, 0, 0, 0, 0.97748, 0, 0, 0)
modulate = Color(0.560784, 0.431373, 0.709804, 1)
alpha_cut = 1
alpha_scissor_threshold = 0.727
texture = ExtResource("1_8uoye")

[node name="border" type="Sprite3D" parent="Visual/Background"]
transform = Transform3D(1.01167, 0, 0, 0, 1.01167, -1.77636e-14, 0, 1.77636e-14, 1.01167, 0, 1.77636e-15, 0.0656082)
texture = ExtResource("5_aotjw")

[node name="highlight" type="Sprite3D" parent="Visual"]
transform = Transform3D(1.08082, 0, 0, 0, 1.05552, 3.55271e-15, 0, -3.55271e-15, 1.08082, 0, 3.33067e-16, 0.022664)
visible = false
render_priority = -1
texture = ExtResource("1_8uoye")

[node name="Area3D" type="Area3D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
shape = SubResource("BoxShape3D_noj8t")

[node name="Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.69579, 1.71989, -2.11813)
sorting_offset = 1.0
texture_filter = 0
text = "In the aft porthole you can see the solar system receding into the distance.
Less a feeling of leaving home but more of escaping prison by the skin of your teeth.

Nothing immediate will happen once this card expires, but you might be able to salvage some resources while still in reach.
"
font_size = 80
outline_size = 0
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 3
width = 2000.0

[node name="Sprite3D" type="Sprite3D" parent="Label"]
transform = Transform3D(2.15982, 0, 0, 0, 1.15253, 0, 0, 0, 1, 4.84304, -2.52264, -0.269779)
pixel_size = 5.0
texture = SubResource("GradientTexture2D_4ahro")

[node name="AudioStreamPlayer3D" parent="." instance=ExtResource("6_dj0qk")]
volume_db = -3.0
unit_size = 20.0

[node name="pick" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_mwuio")
volume_db = 5.0
unit_size = 20.0
bus = &"FX"

[node name="place" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_8pows")
volume_db = 5.0
unit_size = 20.0
bus = &"FX"

[node name="high" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_q4qnh")
volume_db = -5.0
unit_size = 20.0
pitch_scale = 12.0
bus = &"FX"

[node name="oink" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_8ndsl")
unit_size = 20.0
pitch_scale = 0.8
bus = &"FX"

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
